--- a/javascript/index.html
+++ b/javascript/index.html
@@ -16,6 +16,7 @@
     <div class="con22" id="j">
         <p>hi i m div</p>
     </div>
+    <img src="dog2.jpg" onerror=this.src="dog.webp" srcset="">
     <script src="index1.js"></script> 
     <!-- i added here down bcz of dom -->
     
